// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`looks correct when rendered 1`] = `
<View
  keyboardVerticalOffset={20}
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    active={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#f8f8f8",
          "borderColor": "#e5e5e5",
          "borderRadius": 3,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 20,
          "marginLeft": 20,
          "marginRight": 20,
          "marginTop": 0,
        },
        undefined,
      ]
    }
  >
    <TextInput
      keyboardAppearance="dark"
      multiline={true}
      onChangeText={[Function]}
      onEndEditing={[Function]}
      onFocus={[Function]}
      placeholder="Reply..."
      placeholderTextColor="#666666"
      style={
        Object {
          "flex": 1,
          "fontFamily": "AGaramondPro-Regular",
          "fontSize": 13,
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 13,
        }
      }
      value={null}
    />
    <Text
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      allowFontScaling={true}
      disabled={true}
      ellipsizeMode="tail"
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "color": "#e5e5e5",
            "fontFamily": "Avant Garde Gothic ITCW01Dm",
            "fontSize": 12,
            "marginRight": 10,
          },
          undefined,
        ]
      }
      testID={undefined}
    >
      SEND
    </Text>
  </View>
</View>
`

exports[`regarding the send button disables it even if it contains text if the disabled prop is true 1`] = `
<View
  keyboardVerticalOffset={20}
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    active={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#f8f8f8",
          "borderColor": "#e5e5e5",
          "borderRadius": 3,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 20,
          "marginLeft": 20,
          "marginRight": 20,
          "marginTop": 0,
        },
        undefined,
      ]
    }
  >
    <TextInput
      keyboardAppearance="dark"
      multiline={true}
      onChangeText={[Function]}
      onEndEditing={[Function]}
      onFocus={[Function]}
      placeholder="Reply..."
      placeholderTextColor="#666666"
      style={
        Object {
          "flex": 1,
          "fontFamily": "AGaramondPro-Regular",
          "fontSize": 13,
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 13,
        }
      }
      value="History repeats itself, first as tragedy, second as farce."
    />
    <Text
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      allowFontScaling={true}
      disabled={true}
      ellipsizeMode="tail"
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "color": "#e5e5e5",
            "fontFamily": "Avant Garde Gothic ITCW01Dm",
            "fontSize": 12,
            "marginRight": 10,
          },
          undefined,
        ]
      }
      testID={undefined}
    >
      SEND
    </Text>
  </View>
</View>
`

exports[`regarding the send button disables it when there is no text 1`] = `
<View
  keyboardVerticalOffset={20}
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    active={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#f8f8f8",
          "borderColor": "#e5e5e5",
          "borderRadius": 3,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 20,
          "marginLeft": 20,
          "marginRight": 20,
          "marginTop": 0,
        },
        undefined,
      ]
    }
  >
    <TextInput
      keyboardAppearance="dark"
      multiline={true}
      onChangeText={[Function]}
      onEndEditing={[Function]}
      onFocus={[Function]}
      placeholder="Reply..."
      placeholderTextColor="#666666"
      style={
        Object {
          "flex": 1,
          "fontFamily": "AGaramondPro-Regular",
          "fontSize": 13,
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 13,
        }
      }
      value={null}
    />
    <Text
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      allowFontScaling={true}
      disabled={true}
      ellipsizeMode="tail"
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "color": "#e5e5e5",
            "fontFamily": "Avant Garde Gothic ITCW01Dm",
            "fontSize": 12,
            "marginRight": 10,
          },
          undefined,
        ]
      }
      testID={undefined}
    >
      SEND
    </Text>
  </View>
</View>
`
